--- a/index.html
+++ b/index.html
@@ -321,6 +321,23 @@
 							</div>
 						</div>
 					</div>
+					
+
+				</div>
+
+				<div class="project-block project-block-- project-block--images"></div>
+
+					<div class="container">
+						<div class="grid flex">
+							<div class="grid__item a16-16">
+								<div class="project-block__image">
+									<img class="lazy" src="images/ObliqueViewSocialKitchen.jpeg" width="2160" height="1440"
+										alt="" loading="lazy">
+								</div>
+							</div>
+						</div>
+					</div>
+					
 
 				</div>
 				<div class="project-block project-block-- project-block--video_autoplay">
