--- a/index.html
+++ b/index.html
@@ -526,11 +526,28 @@
 				<div class="project-block project-block-- project-block--before_after_image">
 					<div class="container">
 						<div class="project-block__before-after-wrapper">
-							<img class="project-block__before-after-item lazy" src="images/whiteleycomp01diff.webp"
+							<img class="project-block__before-after-item lazy" src="images/Entryshot.png"
 								data-src="https://cdn.the-boundary.com/uploads/projects/_hero/15400/whiteleycomp01diff.webp?v=1718795427"
 								width="2160" height="1440" alt="" loading="lazy">
 							<img class="project-block__before-after-item project-block__before-after-item--after lazy"
-								src="images/whiteleycomp01clay.webp"
+								src="images/arrival_RTA.jpg"
+								data-src="https://cdn.the-boundary.com/uploads/projects/_hero/15399/whiteleycomp01clay.webp?v=1718795427"
+								width="2160" height="1440" alt="" loading="lazy">
+							<input type="range" min="0" max="400" value="200" step="1"
+								class="project-block__before-after-slider" name="slider"
+								aria-label="Compare before and after">
+						</div>
+					</div>
+				</div>
+
+				<div class="project-block project-block-- project-block--before_after_image">
+					<div class="container">
+						<div class="project-block__before-after-wrapper">
+							<img class="project-block__before-after-item lazy" src="images/OasisShotRenders..png"
+								data-src="https://cdn.the-boundary.com/uploads/projects/_hero/15400/whiteleycomp01diff.webp?v=1718795427"
+								width="2160" height="1440" alt="" loading="lazy">
+							<img class="project-block__before-after-item project-block__before-after-item--after lazy"
+								src="images/RTA_Oasis render.png"
 								data-src="https://cdn.the-boundary.com/uploads/projects/_hero/15399/whiteleycomp01clay.webp?v=1718795427"
 								width="2160" height="1440" alt="" loading="lazy">
 							<input type="range" min="0" max="400" value="200" step="1"
